Email Notifications (mailhog) add